Make overlapping assignment names more readable, fixes #7927
Also adds a title attribute to the event div so it's easier to see
squashed events' contents.

test plan:
- create 2 assignments both due at the same time
- look at the week view to see that the overlapping assignments are
  both readable
- and hover the mouse over some events to see the title

Reviewed-on: https://gerrit.instructure.com/11747
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/Calendar.sass
+++ b/app/stylesheets/Calendar.sass
@@ -84,13 +84,8 @@
       color: #9da5ab
 
 .fc-event.assignment
-  border-color: transparent
-  background-color: transparent
-  overflow-x: hidden
-  *
-    display: inline
-  &:hover .fc-event-title
-    text-decoration: underline
+  background-color: white
+
 .counter-badge
   +border-radius(8px)
   background-color: #3cb5fb
